--- a/ERPWeb/Views/AgroConfiguration/GetFinishGoodProductSupplierList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetFinishGoodProductSupplierList.cshtml
@@ -64,12 +64,12 @@
                 <form id="formdepot">
                     <input type="hidden" id="hdSupplierId" />
                     <div class="form-row">
-                        <div class="form-group col-md-12">
+                        @*<div class="form-group col-md-12">
                             <label for="ddlOrganizationName" class="control-label">OrganizationName</label>
                             @Html.DropDownList("ddlOrganizationName", (IEnumerable<SelectListItem>)ViewBag.ddlOrganizationName, "Select OrgName", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                             <span class="error hide required-organizatinName font-weight-bold">Input OrganizatinName!</span>
                             <span class="error hide duplicate-organizatinName font-weight-bold">Already OrganizatinName Exist!</span>
-                        </div>
+                        </div>*@
                         <div class="form-group col-md-12">
                             <label for="ddlSupplierName" class="control-label">Supplier Name</label>
                             <input type="text" id="ddlSupplierName" class="form-control form-control-sm" />
@@ -168,7 +168,7 @@
             $(".error").addClass("hide");
             if (formValidation() == true) {
                 debugger;
-                var data = JSON.stringify({ FinishGoodSupplierId: TryParseInt(hdSupplierId.val(), 0), OrganizationId: TryParseInt(ddlOrganizationName.val(), 0), FinishGoodSupplierName: ddlSupplierName.val(), MobileNumber: ddlMobileNumber.val(), Address: ddlAddress.val(), Status: ddlStatus.val() });
+                var data = JSON.stringify({ FinishGoodSupplierId: TryParseInt(hdSupplierId.val(), 0),FinishGoodSupplierName: ddlSupplierName.val(), MobileNumber: ddlMobileNumber.val(), Address: ddlAddress.val(), Status: ddlStatus.val() });
                 console.log(data);
                 $.when(postReqWithToken(dataType.applicationJson, dataType.json, 'POST', '/AgroConfiguration/SaveFinishGoodProductSupplier', data, getToken())).then(function (res, status) {
                     console.log(status);
@@ -207,7 +207,7 @@
 
             hdSupplierId.val(td1);
             ddlOrganizationName.val(td2);
-            disable(ddlOrganizationName.val(td2));
+            //disable(ddlOrganizationName.val(td2));
             ddlSupplierName.val(td4);
             ddlMobileNumber.val(td5);
             ddlAddress.val(td6);
@@ -244,16 +244,16 @@
             e.preventDefault();
             ClearCtrl();
             OpenModal();
-            enable("#ddlOrganizationName");
+            //enable("#ddlOrganizationName");
         })
 
         function formValidation() {
             Isvalid = true;
             $('.error').addClass("hide");
-            if ($.trim(ddlOrganizationName.val()) == 0) {
-                $('.required-ddlOrganization').removeClass("hide");
-                Isvalid = false;
-            }
+            //if ($.trim(ddlOrganizationName.val()) == 0) {
+            //    $('.required-ddlOrganization').removeClass("hide");
+            //    Isvalid = false;
+            //}
             if ($.trim(ddlSupplierName.val()) == "") {
                 $('.required-SupplierName').removeClass("hide");
                 Isvalid = false;
@@ -268,7 +268,7 @@
         }
         function ClearCtrl() {
             ddlSupplierName.val("");
-            ddlOrganizationName.val('');
+            //ddlOrganizationName.val('');
             hdSupplierId.val('0');
             ddlMobileNumber.val("");
             ddlAddress.val("");
