--- a/ERPWeb/Views/AgroConfiguration/_GetBankPartialView.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetBankPartialView.cshtml
@@ -12,7 +12,7 @@
                     <th style="vertical-align:middle">SL</th>
                     <th style="vertical-align:middle" class="hide"></th>
                     <th style="vertical-align:middle" class="hide"></th>
-                    <th style="vertical-align:middle">Organization Name</th>
+                    <th class="hide" style="vertical-align:middle">Organization Name</th>
                     <th style="vertical-align:middle">BankName</th>
                     <th style="vertical-align:middle">Account Number</th>
                     <th style="vertical-align:middle">Email Address</th>
@@ -31,7 +31,7 @@
                         <td class="text-center text-bold">@SL</td>
                         <td class="hide">@item.BankId</td>
                         <td class="hide">@item.OrganizationId</td>
-                        <td class="text-center">@item.OrganizationName</td>
+                        <td class="hide">@item.OrganizationName</td>
                         <td class="text-center">@item.BankName</td>
                         <td class="text-center">@item.AccountNumber</td>
                         <td class="text-center">@item.Email</td>
