--- a/ERPWeb/Views/AgroConfiguration/GetArealist.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetArealist.cshtml
@@ -24,11 +24,11 @@
 
             <div class="card-body text-sm">
                 <div class="row " style="margin-top:-8px;">
-                    <div class="col-md-2">
+                    @*<div class="col-md-2">
                         <label for="ddlorgname" class="control-label">OrganizationName</label>
                         @Html.DropDownList("ddlorgname", (IEnumerable<SelectListItem>)ViewBag.ddlorgname, "Select OrgName", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                         <span class="error hide required-OrganizationName font-weight-bold">Input OrganizatinName!</span>
-                    </div>
+                    </div>*@
 
                     <div class="col-md-2">
                         <label for="ddlRegionname" class="control-label">RegionName</label>
@@ -67,7 +67,7 @@
                                 <tr class="text-center btn-dark">
                                     <th style="width:5%">#SL</th>
                                     <th class="hide hdOrgId"></th>
-                                    <th style="width:20%">Org Name</th>
+                                    <th class="hide" style="width:20%">Org Name</th>
                                     <th class="hide hdregionId"></th>
                                     <th style="width:15%">Region Name</th>
                                     <th style="width:15%">Area Name</th>
@@ -118,10 +118,10 @@
         function Validationss() {
             Isvalid = true;
             $('.error').addClass("hide");
-            if ($.trim(ddlorgname.val()) == 0) {
-                $('.required-OrganizationName').removeClass("hide");
-                Isvalid = false;
-            }
+            //if ($.trim(ddlorgname.val()) == 0) {
+            //    $('.required-OrganizationName').removeClass("hide");
+            //    Isvalid = false;
+            //}
             if ($.trim(ddlRegionname.val()) == 0) {
                 $('.required-RegionName').removeClass("hide");
                 Isvalid = false;
@@ -151,7 +151,7 @@
                 else {
                     var sl = $("#tblSingleItems tbody tr").length;
                     var td1 = "<td class='text-center'><b>" + (sl + 1) + "</b></td>"
-                    var td2 = "<td class='text-center'>" + dropDownSelectedText("ddlorgname") + "</td>";
+                    var td2 = "<td class='hide'>" + dropDownSelectedText("ddlorgname") + "</td>";
                     var td3 = "<td class='text-center'>" + dropDownSelectedText("ddlRegionname") + "</td>";
                     var td4 = "<td class='text-center'>" + ddlAreaName.val() + "</td>";
                     var td5 = "<td class='hide hdOrgId'>" + ddlorgname.val() + "</td>";
