--- a/ERPWeb/Views/AgroConfiguration/GetMeasurementList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetMeasurementList.cshtml
@@ -41,15 +41,14 @@
                                     <div class="card-body">
                                         <div class="row">
                                             <input type="hidden" id="hdMeasurementId" />
-                                            <div class="col-md-3">
+                                            @*<div class="col-md-3">
                                                 <label class="control-label font-weight-bold" for="ddlOrganiation">Organization Name</label>
                                                 <select class=" form-control form-control-sm" id="ddlOrganiation" name="ddlOrganiation">
                                                     <option value="">Select One</option>
                                                     <option value="9">Agro Farm</option>
                                                 </select>
                                                 <span class="error hide req-ddlOrganiation">Organization is required</span>
-
-                                            </div>
+                                            </div>*@
                                             <div class="col-md-3">
                                                 <label class="control-label font-weight-bold " for="measurementName">Measurement Name</label>
                                                 <input type="text" name="measurementName" id="txtmeasurementName" class="form-control form-control-sm" />
