--- a/ERPWeb/Views/AgroConfiguration/_GetDivisionPartialView.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetDivisionPartialView.cshtml
@@ -35,10 +35,7 @@
 
                     <td class="text-center">
 
-                        <a href="#" class="btn btn-outline-warning data-edit-item-DivisionId" title="Edit" data-edit-item-DivisionId="@item.DivisionId" style="line-height:1">
-                            <i class="fas fa-pen"></i>
-                        </a>
-
+                        <a href="#" class="btn btn-warning data-edit-item-DivisionId" style="line-height:1" data-edit-item-DivisionId="@item.DivisionId"><i class="fa fa-pen"></i>Edit</a>
                     </td>
                 </tr>
                 }
