--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterialSupplierPartialView.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterialSupplierPartialView.cshtml
@@ -12,7 +12,7 @@
                     <th style="vertical-align:middle">#SL</th>
                     <th style="vertical-align:middle" class="hide"></th>
                     <th style="vertical-align:middle" class="hide"></th>
-                    <th style="vertical-align:middle">Organization Name</th>
+                    <th class="hide" style="vertical-align:middle">Organization Name</th>
                     <th style="vertical-align:middle">Supplier Name</th>
                     <th style="vertical-align:middle">Mobile Number</th>
                     <th style="vertical-align:middle">Address</th>
@@ -30,7 +30,7 @@
                         <td class="text-center text-bold">@SL</td>
                         <td class="hide">@item.RawMaterialSupplierId</td>
                         <td class="hide">@item.OrganizationId</td>
-                        <td class="text-center">@item.OrganizationName</td>
+                        <td class="hide">@item.OrganizationName</td>
                         <td class="text-center">@item.RawMaterialSupplierName</td>
                         <td class="text-center">@item.MobileNumber</td>
                         <td class="text-center">@item.Address</td>
