--- a/ERPWeb/Views/AgroConfiguration/_GetStockiestPartialView.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetStockiestPartialView.cshtml
@@ -23,24 +23,19 @@
                 @foreach (var item in Model)
                 {
                     SL = SL + 1;
-                    <tr>
+                <tr>
 
-                        <td class="text-center text-bold">@SL</td>
-                        <td class="hide">@item.StockiestId</td>
-                        <td class="hide">@item.TerritoryId</td>
-                        <td class="text-center">@item.TerritoryName</td>
-                        <td class="text-center">@item.StockiestName</td>
-                        <td class="text-center">@item.Status</td>
-                        <td class="text-center hide">@item.TerritoryId</td>
-                        
-                        <td class="text-center">
-
-                            <a href="#" class="btn btn-outline-warning data-edit-item-StockiestId" title="Edit" data-edit-item-StockiestId="@item.StockiestId" style="line-height:1">
-                                <i class="fas fa-pen"></i>
-                            </a>
-
-                        </td>
-                    </tr>
+                    <td class="text-center text-bold">@SL</td>
+                    <td class="hide">@item.StockiestId</td>
+                    <td class="hide">@item.TerritoryId</td>
+                    <td class="text-center">@item.TerritoryName</td>
+                    <td class="text-center">@item.StockiestName</td>
+                    <td class="text-center">@item.Status</td>
+                    <td class="text-center hide">@item.TerritoryId</td>
+                    <td class="text-center">
+                        <a href="#" class="btn btn-warning btn-sm data-edit-item-StockiestId" style="line-height:1" data-edit-item-Territory="@item.StockiestId"><i class="fa fa-pen"></i> Edit</a>
+                    </td>
+                </tr>
                 }
 
 
